--- a/src/groups/groups.scss
+++ b/src/groups/groups.scss
@@ -10,20 +10,26 @@
 }
 .info-area {
     grid-area: info;
-    height: 600px;
-    border: solid 3px blue;
+    height: 620px;
+    border: solid 3px white;
+    textarea {
+        width: 100%;
+        padding: 6px;
+    }
 }
 .photo-area {
     grid-area: photo;
     .buttons {
         height: 500px;
-        border: 3px solid lightblue;
+        border: 3px solid white;
         padding-right:360px;
         padding-top: 160px;
         button {
             font-size:150%;
             height:150px;
             width: 150px; 
+            border-radius:25px;
+            background-color: green;
         }
         label {
             width:150px;
@@ -31,11 +37,12 @@
             font-size:150%;
             background-color:lightgray;
             border:solid 2px darkgray;
-            border-radius:5px;
+            border-radius:25px;
             text-align:center;
             padding:6px;
             padding-top: 50px;
             cursor: pointer;
+            background-color: #eeeeee;
         }
     }
     .picture {
@@ -44,7 +51,7 @@
 }
 .footer-area1 {
     grid-area: footer;
-    border: 3px solid green;
+    border: 3px solid white;
     height: 90px;
 }
 .uploader-page {
@@ -52,7 +59,7 @@
     grid-row-gap: 10px;
     grid-column-gap: 10px;
     //width: 1200px;
-    //height: 800px;
+    height: 820px;
     grid-template-areas: 
         'header header header header header header header header header header logo logo'
         'photo photo photo photo photo photo photo photo photo photo info info'
