--- a/src/resources/elements/multi-select/multi-select.scss
+++ b/src/resources/elements/multi-select/multi-select.scss
@@ -18,6 +18,12 @@
         margin-left: 0;
         padding: 0;
     }
+    li.active {
+        background-color: orange;
+        a {
+            color: white;
+        }
+    }
 
     div.options {
         overflow-x: hidden;
