identify people on uploaded photo

--- a/src/groups/groups.scss
+++ b/src/groups/groups.scss
@@ -71,4 +71,7 @@
         'photo photo photo photo photo photo photo photo photo photo info info'
         'footer footer footer footer footer footer footer footer footer footer info info';
 }
+div.photos-ready {
+    cursor: pointer;
+}
 
