--- a/src/resources/elements/chats/chats.scss
+++ b/src/resources/elements/chats/chats.scss
@@ -1,30 +1,38 @@
-div.box {
-    overflow-y: auto;
-    max-height: 780px;
-    margin-bottom: 10px;
-    padding: 5px;
-}
 
-a:disabled {
-    color: lightgray;
-    background: yellow;
-}
+div.chatroom {
 
-ul.rtl {
-    direction: rtl;
-    padding-right: 24px;
-    padding-left: 12px;
-}
+    div.box {
+        overflow-y: auto;
+        max-height: 780px;
+        margin-bottom: 10px;
+        padding: 5px;
+    }
 
-ul.ltr {
-    direction: ltr;
-    padding-right: 12px;
-    padding-left: 24px;
-}
+    a:disabled {
+        color: lightgray;
+        background: yellow;
+    }
 
-li.chat-message {
-    padding-bottom: 8px;
-    border-bottom: solid 2px white;
-    margin-bottom: 8px;
-}
+    ul.rtl {
+        direction: rtl;
+        padding-right: 8px;
+        padding-left: 0px;
+    }
 
+    ul.ltr {
+        direction: ltr;
+        padding-right: 0px;
+        padding-left: 8px;
+    }
+
+    li.chat-message {
+        padding-bottom: 8px;
+        border-bottom: solid 2px white;
+        margin-bottom: 8px;
+    }
+
+    div.row.messages-area {
+        margin:0;
+    }
+
+}
