--- a/src/photos/full-size-photo.scss
+++ b/src/photos/full-size-photo.scss
@@ -86,6 +86,11 @@ body.black-overlay ux-dialog-overlay.active {
     opacity: 0.9;
 } 
 
+body.semi-black-overlay ux-dialog-overlay.active {
+    background-color: black;
+    opacity: 0.5;
+}
+
 .full-size-photo .date-range label {
     margin-right:-6px;
     padding:4px;
