--- a/src/groups/groups.scss
+++ b/src/groups/groups.scss
@@ -33,21 +33,27 @@
         padding-top: 160px;
         button {
             font-size:150%;
-            height:65px;
+            height:50px;
             width: 150px; 
             border-radius:25px;
-            background-color: green;
+            background-color: rgba(0, 128, 0, 0.8);
+            &:hover {
+                background-color: green;
+            }
         }
         label {
             width:150px;
-            height:65px;
+            height:50px;
             font-size:150%;
-            background-color:orange;
+            background-color:rgba(255, 165, 0, 0.8);
+            &:hover {
+                background-color: orange;
+            }
             border:solid 2px darkgray;
             border-radius:25px;
             text-align:center;
             padding:6px;
-            padding-top: 16px;
+            padding-top: 8px;
             cursor: pointer;
             &.disabled {
                 cursor: no-drop;
