--- a/src/photos/_photos.desktop.scss
+++ b/src/photos/_photos.desktop.scss
@@ -5,7 +5,7 @@ div.multi-select-div {
     min-height: 170px;
 }
 #photos-container {
-    height: 579px;
+    height: calc(100vh - 360px);
     &.empty-photos {
         height: 512px;
     }
@@ -14,4 +14,9 @@ div.multi-select-div {
 
 #photos_area {
     height: 380px;
+}
+
+#photo-filters-panel {
+    height: calc(100vh - 360px);
+    overflow: auto;
 }
