--- a/src/videos/_videos.desktop.scss
+++ b/src/videos/_videos.desktop.scss
@@ -1,7 +1,7 @@
 $vid-height: 160px;
 $vid-width: 260px;
 div.video-page {
-    height:380px;
+    height:calc(100vh-300px);
     width:100%;
     margin-bottom:24px;
     margin-top:20px;
@@ -13,9 +13,9 @@ div.video-page {
         justify-content: flex-start;
         align-content: flex-start;
         width: 100%;
-        height: 640px;
+        height: calc(100vh - 300px);
         &.empty-videos {
-            height: 500px;
+            height: 300px;
         }
         overflow: auto;
         span.fr-video {
@@ -61,5 +61,10 @@ div.video-page {
 #video-help {
     top: 2px;
     left: 2px;
+}
+
+#video-filters {
+    height: calc(100vh - 300px);
+    overflow: auto;
 }
 
