--- a/src/photos/full-size-photo.scss
+++ b/src/photos/full-size-photo.scss
@@ -28,7 +28,7 @@ button.face:hover {
     left: -32px;
     width: 32px;
     height: 32px;
-    position: absolute;
+    //position: absolute;
     background-color:rgba(0,0,0,0);
     border: none;
     &.help {
@@ -74,7 +74,7 @@ button.face:hover {
     color:yellow;
     //font-weight: bolder;
     opacity:1.0;
-    position:absolute;
+    //position:absolute;
     font-size:70%;
     display: flex;
     flex-direction:column;
