--- a/src/photos/full-size-photo.scss
+++ b/src/photos/full-size-photo.scss
@@ -40,31 +40,27 @@ button.face:hover {
         color: yellow;
     }
     &.story {
-        top: 64px;
         color: white;
     }
     &.copy-to-clipboard {
-        top: 96px;
         color: white;
     }
     &.flip-sides {
-        top: 128px;
         color: white;
     }
     &.crop {
-        top: 160px;
         color: white;
     }
     &.cancel-crop {
-        top: 192px;
+        color: white;
+    }
+    &.rotate {
         color: white;
     }
     &.next-slide {
-        top: 224px;
         color: white;
     }
     &.prev-slide {
-        top: 256px;
         color: white;
     }
 }
@@ -72,9 +68,7 @@ button.face:hover {
 .full-size-photo .highlighted-face {
     background-color:black;
     color:yellow;
-    //font-weight: bolder;
     opacity:1.0;
-    //position:absolute;
     font-size:70%;
     display: flex;
     flex-direction:column;
