--- a/src/groups/groups.scss
+++ b/src/groups/groups.scss
@@ -13,6 +13,14 @@
     width: 275px;
     height: calc(100vh - 320px);
     border: solid 3px white;
+    button#login-button {
+        color: black;
+        background-color:  rgba(173, 216, 230, 0.4);
+        &.attempting {
+            background-color: lightblue;
+            font-weight: bolder;
+        }
+    }
     textarea {
         width: 100%;
         padding: 6px;
