full screen view

--- a/src/photos/full-size-photo.scss
+++ b/src/photos/full-size-photo.scss
@@ -45,6 +45,9 @@ button.face:hover {
     &.copy-to-clipboard {
         color: white;
     }
+    &.full-screen {
+        color: white;
+    }
     &.flip-sides {
         color: white;
     }
