--- a/src/photos/_photos.scss
+++ b/src/photos/_photos.scss
@@ -127,3 +127,8 @@ div.slide {
     }
 }
 
+// .fullscreen {
+//     width: auto !important;
+//     height: auto !important;
+//     margin:auto !important;
+// }
