--- a/src/photos/full-size-photo.scss
+++ b/src/photos/full-size-photo.scss
@@ -121,3 +121,26 @@ button.next-slide:focus {
     color: yellow;
 }
 
+div#photo-image {
+    position: relative;
+    padding: 0;
+    margin: 0;
+    >span {
+        position: absolute;
+        z-index: 0;
+        top: 45%;
+        cursor: pointer;
+        color:  rgba(255,255,255,0.4);
+        font-size: 500%;
+        &:hover {
+            color: white;
+        }
+        &.prev {
+            left: 20px;
+        }
+        &.next {
+            right: 20px;
+        }
+    }
+}
+
