photo detail layout. wip.

--- a/src/photos/_photos.scss
+++ b/src/photos/_photos.scss
@@ -127,6 +127,12 @@ div.slide {
     }
 }
 
+div.photo-story {
+    padding-top:8px;
+    width:100%;
+    height:calc(100vh - 200px);
+}
+
 // .fullscreen {
 //     width: auto !important;
 //     height: auto !important;
