--- a/src/stories/_stories.scss
+++ b/src/stories/_stories.scss
@@ -17,6 +17,7 @@ ux-dialog>ux-dialog-body {
 
 div.big-story-panel {
     overflow: auto;
+    height: 100%;
     p {
         font-size: 110%;
         text-align: justify;
