--- a/src/photos/_photos.scss
+++ b/src/photos/_photos.scss
@@ -35,9 +35,12 @@ div.panel.panel-default {
     margin-left:auto;
     margin-right:auto;
     min-height:755px;
+    editable div.story-section {
+        height: 150px;
+    }
     .date-range { 
         label {
-            margin-right:-6px;
+            margin-right:-4px;
             margin-left: 10px;
             padding:4px;
             width:100px;
@@ -49,6 +52,13 @@ div.panel.panel-default {
     img {
         cursor: pointer;
         float:left;
+    }
+    date-range label {
+        font-size: 14px;
+        font-weight: normal;
+    }
+    date-range {
+        height: 28px;
     }
 }
 
@@ -132,9 +142,3 @@ div.photo-story {
     width:100%;
     height:calc(100vh - 200px);
 }
-
-// .fullscreen {
-//     width: auto !important;
-//     height: auto !important;
-//     margin:auto !important;
-// }
