--- a/src/photos/full-size-photo.scss
+++ b/src/photos/full-size-photo.scss
@@ -103,6 +103,7 @@ body.semi-black-overlay ux-dialog-overlay.active {
         direction: rtl;
         .photo-info-names {
             margin-left: 10px;
+            margin-top:-8px;
         }
     }
     &.ltr {
