--- a/src/resources/elements/chats/chats.scss
+++ b/src/resources/elements/chats/chats.scss
@@ -43,6 +43,21 @@ div.chatroom {
 
 }
 
+chat-button button {
+    margin-left: 8px;
+    margin-right: 8px;
+    background-color:rgba(0,0,0,0.16);
+    border: solid 1px white;
+    border-radius: 8px;
+    // margin-top: -16px;
+    color:white;
+    font-size: large;
+}
+
+chat-button button.empty {
+    background-color: rgba(0,0,0,0)
+}
+
 i.disabled {
     opacity: 0.5;
     cursor: no-drop;
