--- a/src/groups/groups.scss
+++ b/src/groups/groups.scss
@@ -36,6 +36,12 @@
     div.options, div.search-filter {
         width: 100%;
     }
+    div.warning {
+        width: 100%;
+        height: 32px;
+        padding: 4px 6px;
+        margin-bottom: 12px;
+    }
 }
 .photo-area {
     grid-area: photo;
