--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,6 +27,7 @@ $navbar-default-link-active-bg: inherit;
 /* Elements */
 @import 'resources/elements/photo-strip';
 @import 'resources/elements/quiz/quiz';
+@import 'resources/elements/quick-login';
 
 /* Globals */
 html, body {
