--- a/src/resources/elements/search-input.scss
+++ b/src/resources/elements/search-input.scss
@@ -1,6 +1,6 @@
 div.search-input {
     display: flex;
-    width: 98%;
+    width: 100%;
     i.remove {
         top: 12px;
         left: 10px;
@@ -18,9 +18,12 @@ div.search-input {
         color: gray;
     }
     input {
-        padding-left:24px;
-        padding-right:6px;
+        padding-left: 24px;
+        padding-right: 6px;
+        padding-bottom: 2px;
         width: 100%;
-        height: 33px;
+        height: 32px;
+        border:solid 1px gray;
+        border-right: 0;
     }
 }
