--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,7 @@ $navbar-default-link-active-bg: inherit;
 @import 'app';
 @import 'home/home';
 @import 'members/members';
+@import 'articles/articles';
 @import 'photos/photos';
 @import 'stories/stories';
 @import 'terms/terms';
