--- a/src/_app.scss
+++ b/src/_app.scss
@@ -75,6 +75,7 @@
             padding-left: 2rem;
             padding-right: 0.5rem;
             width: 100%;
+            height: 32px;
         }
 
         i {
