--- a/src/members/member-picker.scss
+++ b/src/members/member-picker.scss
@@ -27,6 +27,9 @@ div#member-picker {
                 height:50px;
                 border-radius:50%;
             }
+            &.selected img {
+                border: 3px solid yellow;
+            }
         }
     }
 }
