--- a/src/maps/map.scss
+++ b/src/maps/map.scss
@@ -1,4 +1,18 @@
 #mapa input {
-    width: 600px;
+    //width: 600px;
     display: inline;
+}
+#pac-input {
+  background-color: #fff;
+  //font-family: Roboto;
+  font-size: 15px;
+  font-weight: 300;
+  margin-left: 12px;
+  padding: 0 11px 0 13px;
+  text-overflow: ellipsis;
+  width: 400px;
+}
+
+#pac-input:focus {
+  border-color: #4d90fe;
 }
