started video with cues

--- a/src/videos/_videos.scss
+++ b/src/videos/_videos.scss
@@ -4,3 +4,10 @@
 #video-help {
     position:absolute;
 }
+
+#video-details {
+    .video-detail-body {
+        display: flex;
+        justify-content: space-between;
+    }
+}
