Video with cues - wip

--- a/src/videos/_videos.scss
+++ b/src/videos/_videos.scss
@@ -10,4 +10,13 @@
         display: flex;
         justify-content: space-between;
     }
+    div.video-area {
+        display: flex;
+        flex-direction: column;
+    }
+    div.cue-points-area {
+        height: 250px;
+        overflow: auto;
+    }
+
 }
