Video with cues - wip. still some issues.

--- a/src/videos/_videos.scss
+++ b/src/videos/_videos.scss
@@ -18,5 +18,10 @@
         height: 250px;
         overflow: auto;
     }
+    div.data-area {
+        display: flex;
+        flex-direction: column;
+    }
+
 
 }
