--- a/src/photos/_photos.scss
+++ b/src/photos/_photos.scss
@@ -10,6 +10,32 @@ a.photo-selected img{
     width: 90%;
 }
 
+div.multi-select-div {
+    margin-bottom: 15px;
+    position:relative;
+    .header {
+        margin-top: 0px;
+        margin-bottom:2px;
+        font-size:120%;
+    }
+    help {
+        position: absolute;
+        top:2px;
+    }
+}
+
+div.multi-select-div.ltr {
+    help {
+        right:2px;
+    }
+}
+div.multi-select-div.rtl {
+    help {
+        left:2px;
+    }
+}
+
+
 a.photo-maximizer {
     position:absolute;
     right:0px;
