chasing strange bug. does not occur locally.

--- a/src/members/_members.scss
+++ b/src/members/_members.scss
@@ -25,6 +25,16 @@ div.member-list.content-area li.list-group-item {
         } 
     }
 }
+div.rtl {
+    select {
+        direction: rtl;
+    }
+}
+div.ltr {
+    select {
+        direction: ltr;
+    }
+}
 
 .rtl a {
     direction: rtl;
