--- a/src/members/_members.scss
+++ b/src/members/_members.scss
@@ -26,12 +26,12 @@ div.member-list.content-area li.list-group-item {
     }
 }
 div.rtl {
-    select {
+    select,input {
         direction: rtl;
     }
 }
 div.ltr {
-    select {
+    select,input {
         direction: ltr;
     }
 }
