rtl / ltr in member-detail page

--- a/src/members/_members.desktop.scss
+++ b/src/members/_members.desktop.scss
@@ -15,6 +15,10 @@ div.member-list.content-area li.list-group-item {
     #member-detail-content > div {
         min-height: 268px;
     }
+    #member-detail-content {
+        display: flex;
+        flex-direction: row-reverse;
+    }
 }
 
 #members-filter {
