--- a/src/stories/_stories.scss
+++ b/src/stories/_stories.scss
@@ -227,4 +227,21 @@ ul.story-list {
     margin-top: 16px;
 }
 
+#story-filters {
+    >div>help {
+        position: absolute;
+        top: 32px;
+    }
+}
+[dir="rtl"] #story-filters {
+    >div>help {
+        left: 7px;
+    }
+}
+[dir="ltr"] #story-filters {
+    >div>help {
+        left: 333px;
+    }
+}
+
 
