log debug info for missing photo/doc info

--- a/src/stories/_stories.scss
+++ b/src/stories/_stories.scss
@@ -175,7 +175,7 @@ button.transparent, button.transparent:focus {
 
 div.story-preview {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     div>img {
         padding-left:10px;
         align-self: stretch;
