full size photo close button for mobiles

--- a/src/photos/full-size-photo.scss
+++ b/src/photos/full-size-photo.scss
@@ -67,6 +67,9 @@ button.face:hover {
     &.prev-slide {
         color: white;
     }
+    &.detail {
+        color: white;
+    }
 }
 
 button.navigation-arrow {
