videos in the home page

--- a/src/home/_home.scss
+++ b/src/home/_home.scss
@@ -19,9 +19,9 @@
 .panel-vid {
     display: flex;
     padding: 0;
-    iframe {
-        height: 121px;
-        margin-bottom: 16px;
+    //margin-top: -7px;
+    h2 {
+        margin-bottom:16px;
     }
 }
 
