--- a/src/videos/_videos.desktop.scss
+++ b/src/videos/_videos.desktop.scss
@@ -53,7 +53,8 @@ div.video-page {
          justify-content:flex-start;
          align-items: flex-start;
          div.ctrl>button {
-             height: 38px;
+             height: 32px;
+             margin: 0px 3px;
          }
     }
 }
