place videos in member's photo list

--- a/src/videos/_videos.scss
+++ b/src/videos/_videos.scss
@@ -11,6 +11,11 @@
         display: flex;
         justify-content: space-between;
     }
+    .detail-header {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+    }
 
     div.video-area {
         display: flex;
