background color for mobiles

--- a/src/_app.desktop.scss
+++ b/src/_app.desktop.scss
@@ -96,4 +96,6 @@ $navbar-height: 60px;
     font-size: 90%;
 }
 
-
+div.page-container {
+    background-image: url(https://tol.life/gbs__test/static/apps_data/images/body-bg.jpg)
+}
