no scrolling of full story in mobiles

--- a/src/stories/_stories.desktop.scss
+++ b/src/stories/_stories.desktop.scss
@@ -27,3 +27,9 @@ div.big-story-panel {
     padding-right: 36px;
 }
 
+div.full-story {
+    max-height: calc(100vh - 250px);
+    overflow: auto;
+    margin: 10px -22px 0 20px;
+}
+
