chanes for mobiles

--- a/src/_palettes.scss
+++ b/src/_palettes.scss
@@ -3,7 +3,7 @@
         background: rgba(80, 80, 80, 0.3);
     }
     .editable, .story-preview, .member-story-preview, .outer-story-preview {
-        background-color: default;
+        background-color: inherit;
     }
     .detail-header {
         background-color: #bbbbbb;
