--- a/src/_app.mobile.scss
+++ b/src/_app.mobile.scss
@@ -92,6 +92,11 @@ $navbar-height: 78px;
     height: 2em;
 }
 
+.detail-header {
+    margin-top: 26px;
+    //height:40px;
+}
+
 div.page-container {
     background-color: turquoise;
 }
