--- a/src/members/_members.mobile.scss
+++ b/src/members/_members.mobile.scss
@@ -15,3 +15,7 @@ div.member-list.content-area li.list-group-item {
     width: 90%;
     font-size: 13px;
 }
+
+div#breadcrumb {
+    margin-top:26px;
+}
