misc changes for mobiles

--- a/src/_app.mobile.scss
+++ b/src/_app.mobile.scss
@@ -101,7 +101,7 @@ $navbar-height: 78px;
 }
 
 div.page-container {
-    background-color: turquoise;
+    background-color: antiquewhite;
 }
 
 div.container {
