--- a/src/stories/_stories.scss
+++ b/src/stories/_stories.scss
@@ -237,5 +237,11 @@ ul.story-list {
         left: 333px;
     }
 }
-
+div#associated {
+    max-height:calc(100vh - 500px);
+    overflow:auto;
+    overflow-x:hidden;
+    display:flex;
+    flex-direction:column;
+}
 
