--- a/src/stories/_stories.desktop.scss
+++ b/src/stories/_stories.desktop.scss
@@ -33,3 +33,8 @@ div.full-story {
     margin: 10px -22px 0 20px;
 }
 
+div#associated {
+    max-height:calc(100vh - 510px);
+    overflow:auto;
+    overflow-x:hidden;
+}
