--- a/src/photos/_photos.scss
+++ b/src/photos/_photos.scss
@@ -68,7 +68,7 @@ div.panel.panel-default {
 .photo-detail {
     margin-left:auto;
     margin-right:auto;
-    min-height:755px;
+    //min-height:755px;
     .detail-header {
         display: flex;
         flex-direction: row-reverse;
