--- a/src/photos/_photos.mobile.scss
+++ b/src/photos/_photos.mobile.scss
@@ -22,6 +22,7 @@
 #photos-container {
     width: 100vw;
 }
-div#full-size-photo {
-    margin-left:0px;
+
+div#full-size-photo-toolbar {
+    padding-top: 40px;
 }
