--- a/src/gallery/_gallery.scss
+++ b/src/gallery/_gallery.scss
@@ -52,20 +52,22 @@ div.scaled-frame {
 
 div.app-list {
     overflow: auto;
-    height: 480px;
+    height: calc(100vh - 250px);
     display: flex;
     flex-wrap: wrap;
     margin-top: 20px;
 }
 div.app-link {
     display: flex;
-    padding: 10px;
     flex-direction: column;
+    justify-content: space-between;
     width: 250px;
-    height: 220px;
+    height: 230px;
+    overflow: hidden;
     border: solid 10px white;
     background-color: lightgray;
     div.app-link-top {
+        padding: 10px;
         img {
             width: 32px;
         }
@@ -75,7 +77,7 @@ div.app-link {
     }
     div.app-link-bottom {
         img {
-            margin-right: 15px;
+            width: 100%;
         }
     }
 }
