trying to prevent freeze, no popup

--- a/src/resources/elements/search-input.scss
+++ b/src/resources/elements/search-input.scss
@@ -19,6 +19,8 @@ div.search-input {
     }
     input {
         padding-bottom: 2px;
+        padding-left: 3px;
+        padding-right: 3px;
         width: 100%;
         height: 32px;
         border:solid 1px gray;
