--- a/src/photos/full-size-photo.scss
+++ b/src/photos/full-size-photo.scss
@@ -39,6 +39,7 @@ button.face:hover {
     }
     &.highlighter {
         color: yellow;
+        margin-top:10px;
     }
     &.story {
         color: white;
