--- a/src/members/_members.desktop.scss
+++ b/src/members/_members.desktop.scss
@@ -39,3 +39,8 @@ div.member-list.content-area li.list-group-item {
         height: 185px;
     }
 }
+
+ux-dialog.config-member-stories {
+    width: 400px;
+}
+
