modify system terms fixed

--- a/src/resources/elements/multi-select/multi-select.scss
+++ b/src/resources/elements/multi-select/multi-select.scss
@@ -168,6 +168,8 @@
 
     .option-kind-1 {
         color: blue;
+        font-weight: bolder;
+        font-size: larger;
     }
 
     .option-kind-2 {
