new sass insists on spaces...

--- a/src/videos/_videos.desktop.scss
+++ b/src/videos/_videos.desktop.scss
@@ -1,7 +1,7 @@
 $vid-height: 160px;
 $vid-width: 260px;
 div.video-page {
-    height:calc(100vh-300px);
+    height:calc(100vh - 300px);
     width:100%;
     margin-bottom:24px;
     margin-top:20px;
