member filter style

--- a/src/members/_members.desktop.scss
+++ b/src/members/_members.desktop.scss
@@ -22,8 +22,8 @@ div.member-list.content-area li.list-group-item {
 }
 
 #members-filter {
-    width:50%;
-    font-size:18px;
+    width:260px;
+    font-size:14px;
 }
 
 [dir="rtl"] div.member-story-panel {
