highlight cuepoints with member

--- a/src/videos/_videos.scss
+++ b/src/videos/_videos.scss
@@ -37,6 +37,9 @@
             width:50%;
         }
     }
+    td.hilited {
+        background-color: rgb(216, 216, 137);
+    }
 }
 
 div.video-story {
