--- a/src/videos/_videos.scss
+++ b/src/videos/_videos.scss
@@ -37,8 +37,8 @@
             width:50%;
         }
     }
-    td.hilited {
-        background-color: rgb(216, 216, 137);
+    tr.hilited {
+        background-color: yellowgreen;
     }
 }
 
