pritim for objects

--- a/src/_app.desktop.scss
+++ b/src/_app.desktop.scss
@@ -18,7 +18,7 @@ $navbar-height: 60px;
     .nav-item {
         font-size: 1.80rem;
         line-height: 2.1rem;
-        padding: 0.5rem;
+        padding: 0.5rem 0.15rem;
     }
 
     .navbar-logo {
@@ -27,7 +27,7 @@ $navbar-height: 60px;
 
         img {
             width: 3.4rem;
-            margin-left: 0.5rem;
+            margin-left: 0.00rem;
         }
     }
 
