--- a/src/members/_members.scss
+++ b/src/members/_members.scss
@@ -117,6 +117,25 @@ ux-dialog-containerxxx {
     }
 }
 
+div.family-buttons {
+    display:flex;
+    flex-direction:row;
+    margin-right:-15px;
+    button {
+        width: 60px;
+        height:32px;
+        border-radius: 5px;
+        font-size: 12px;
+        padding-top:2px;
+        font-size:16px;
+        &.family-type {
+            width: 30px;
+            padding: 0px;
+            padding-top:2px;
+            margin-right:8px;
+        }
+    }
+}
 
 .family-chains {
     overflow: auto;
