--- a/src/members/_members.scss
+++ b/src/members/_members.scss
@@ -153,9 +153,12 @@ div.family-buttons {
         & img {
             float:right;
         }
-        max-width:110px;
-        min-width:110px;
+        max-width:105px;
+        min-width:105px;
         overflow:hidden;
+        &.together {
+            box-shadow: 5px 5px lightgreen;
+        }
     }
     ul {
         list-style-type: none;
