groups manager etc.

--- a/src/groups/groups.scss
+++ b/src/groups/groups.scss
@@ -117,3 +117,12 @@
 div.photos-ready {
     cursor: pointer;
 }
+
+table#groups-table {
+    td {
+        height: 38px;
+    }
+    tr {
+        height: 38px;
+    }
+}
