--- a/src/groups/groups.scss
+++ b/src/groups/groups.scss
@@ -126,3 +126,16 @@ table#groups-table {
         height: 38px;
     }
 }
+
+google-map {
+    height: 620px!important;
+}
+
+div.uploader-page multi-select {
+    input {
+        width: 198px;
+    }
+    div.options {
+        width: 100%!important;
+    }
+}
